# whisper.unity

./: .gitignore  WHISPER175_PERFORMANCE_REPORT.md  build_cpp.sh  build_cpp_android_optimized.bat  build_cpp_futo.sh  build_cpp_optimized.sh  build_cpp_whisper175.bat  build_cpp_whisper175.sh  build_log.txt  create_archive.bat
.Agents/: OPTIMIZED_BUILD_REPORT.md  instuct.md  instuct_v2.md  optimization_report.md
.agent/: FUTO_PORTING_REPORT.md  OPTIMIZATION_REPORT.md  WHISPER175_BUILD_GUIDE.md  WHISPER175_PERFORMANCE_REPORT.md  optimize.md  prompt.md  setup.md  walkthrough.md
Assets/Editor/: AutoBuilder.cs  WhisperManagerEditor.cs
Assets/Samples/1 - Audio Clip/: 1 - Audio Clip.unity  AudioClipDemo.cs
Assets/Samples/1 - Audio Clip Benchmark/: 1 - Audio Clip Benchmark.unity  AudioClipBenchmarkDemo.cs
Assets/Samples/2 - Microphone/: 2 - Microphone.unity  MicrophoneDemo.cs
Assets/Samples/4 - Subtitles/: SubtitlesDemo.cs
Assets/Samples/6 - VoiceCommands/: 6 - VoiceCommands.unity  VoiceCommandsDemo.cs
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
build-futo-arm32/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-futo-test/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-whisper175-arm32/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  whisper-config.cmake
build-whisper175-arm32/ggml/: cmake_install.cmake  ggml-config.cmake  ggml-version.cmake
build-whisper175-arm32/ggml/src/: cmake_install.cmake
build-whisper175-arm32/ggml/src/ggml-cpu/: cmake_install.cmake
build-whisper175-arm32/src/: cmake_install.cmake
build-whisper175-arm64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build-whisper175-arm64/ggml/: cmake_install.cmake  ggml-config.cmake  ggml-version.cmake
build-whisper175-arm64/ggml/src/: cmake_install.cmake
build-whisper175-arm64/ggml/src/ggml-cpu/: cmake_install.cmake
build-whisper175-arm64/src/: cmake_install.cmake
ggml-futo/: CMakeLists.txt  ggml-backend.c  ggml.h  whisper.cpp  whisper.h
